--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
         <h1 class="text-light"><a href="index.html">Barionix</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/_mario.dev/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/mariojrsoares/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -73,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Mário Soares</h1>
-      <p>I'm <span class="typed" data-typed-items="a Developer, Developer,a Freelancer,a Golang Enthusiastic"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Developer,a Freelancer,a Golang Enthusiastic"></span></p>
     </div>
   </section><!-- End Hero -->
 
