:art: add media link

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Barionix</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="http://t.me/Barionixx" class="twitter"><i class="bi bi-telegram"></i></a>
           <a href="https://www.instagram.com/_mario.dev/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://github.com/Barionix" class="google-plus"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/mariojrsoares/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
