:art: add skill value

--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>The parameter used on the following graphic is "Years on production", a few of those technologies i've been using for 7 years but i'm considering only the time i used on the market.</p>
         </div>
-
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
