--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Mário(in case i wasn't clear by now), i've been Programming since i was 14, currently Software engineering at Júnior level after 7 years of casual/loving programming and 2 years on the actual market.</p>
+          <p>I'm Mário(in case i wasn't clear by now), i've been Programming since i was 14, currently Software engineering at Júnior level after 5 years of casual/loving programming and 5 years on the actual market, counting 10 years of coding experience.</p>
         </div>
 
         <div class="row">
@@ -104,7 +104,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mariojuniorsoaresdev@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -124,23 +124,23 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>The parameter used on the following graphic is "Years on production", a few of those technologies i've been using for 7 years but i'm considering only the time i used on the market.</p>
+          <p>The parameter used on the following graphic is "Years on production", a few of those technologies i've been using for 10 years but i'm considering only the time i used on the market.</p>
         </div>
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">1 year(s)</i></span>
+              <span class="skill">Python <i class="val">8 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="16" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Node.js<i class="val">1,5 year(s)</i></span>
+              <span class="skill">Node.js<i class="val">4 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -163,16 +163,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Golang<i class="val">1,5 year(s)</i></span>
+              <span class="skill">Golang<i class="val">7 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">React.js<i class="val">2 year(s)</i></span>
+              <span class="skill">React.js<i class="val">4 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
