--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Mário(in case i wasn't clear by now), i've been Programming since i was 14, currently Software engineering at Júnior level after 5 years of casual/loving programming and 5 years on the actual market, counting 10 years of coding experience.</p>
+          <p>I'm Mário(in case i wasn't clear by now), i've been Programming since i was 14, currently Software engineering at Senior level after 5 years of casual/loving programming and 5 years on the actual market, counting 10 years of coding experience.</p>
         </div>
 
         <div class="row">
