--- a/index.html
+++ b/index.html
@@ -183,6 +183,51 @@
       </div>
     </section><!-- End Skills Section -->
 
+        <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <p>Abaixo alguns dos meus projetos. Cada um contém uma breve descrição das tecnologias utilizadas e o link para o repositório.</p>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>E-commerce (Node/React)</h4>
+              <p><strong>Linguagens:</strong> JavaScript, Node.js, React.js</p>
+              <a href="https://github.com/Barionix/e-commerce-react-node" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> Ver no GitHub
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Nome do Projeto 2</h4>
+              <p><strong>Linguagens:</strong> Node.js, React</p>
+              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> Ver no GitHub
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Nome do Projeto 3</h4>
+              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> Ver no GitHub
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End Portfolio Section -->
+
     <!-- ======= Resume Section ======= 
     <section id="resume" class="resume">
       <div class="container">
