--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>Nome do Projeto 2</h4>
+              <h4>E-commerce (Golang/React)</h4>
               <p><strong>Linguagens:</strong> Node.js, React</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> Ver no GitHub
@@ -216,14 +216,22 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>Nome do Projeto 3</h4>
+              <h4>E-commerce (Django/React)</h4>
               <p><strong>Linguagens:</strong> Python, Flask</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> Ver no GitHub
               </a>
             </div>
           </div>
-
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Auth (Golang/React)</h4>
+              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> Ver no GitHub
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section><!-- End Portfolio Section -->
