--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Abaixo alguns dos meus projetos. Cada um contém uma breve descrição das tecnologias utilizadas e o link para o repositório.</p>
+          <h3>Whitelabels</h3>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -199,7 +199,7 @@
               <h4>E-commerce (Node/React)</h4>
               <p><strong>Linguagens:</strong> JavaScript, Node.js, React.js</p>
               <a href="https://github.com/Barionix/e-commerce-react-node" target="_blank" class="btn btn-sm btn-outline-primary">
-                <i class="bi bi-github"></i> Ver no GitHub
+                <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
           </div>
@@ -207,9 +207,9 @@
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>E-commerce (Golang/React)</h4>
-              <p><strong>Linguagens:</strong> Node.js, React</p>
+              <p><strong>Linguagens:</strong> Golang, React</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
-                <i class="bi bi-github"></i> Ver no GitHub
+                <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
           </div>
@@ -219,7 +219,61 @@
               <h4>E-commerce (Django/React)</h4>
               <p><strong>Linguagens:</strong> Python, Flask</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
-                <i class="bi bi-github"></i> Ver no GitHub
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Auth (Golang/React)</h4>
+              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <a href="https://github.com/Barionix/GoLAUTH" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h3>Tools and Projects</h3>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Gogram - Telegram API Wrapper</h4>
+              <p><strong>Linguagens:</strong>Golang</p>
+              <a href="https://github.com/Barionix/gogram" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Gonion - Onion link finder tool</h4>
+              <p><strong>Linguagens:</strong> Golang</p>
+              <a href="https://github.com/Barionix/Gonion" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Gym System with payment integration</h4>
+              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <a href="https://github.com/Barionix/MForm" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See Back-End on GitHub
+              </a>
+              <a href="https://github.com/Barionix/MForm-Front" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See Front-End on GitHub
               </a>
             </div>
           </div>
@@ -228,13 +282,32 @@
               <h4>Auth (Golang/React)</h4>
               <p><strong>Linguagens:</strong> Python, Flask</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
-                <i class="bi bi-github"></i> Ver no GitHub
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+           <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Admin Finder</h4>
+              <p><strong>Linguagens:</strong>Golang</p>
+              <a href="https://github.com/Barionix/Trovilo" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See on GitHub
+              </a>
+            </div>
+          </div>
+            <div class="col-lg-6">
+            <div class="portfolio-item p-3 shadow-sm rounded mb-4">
+              <h4>Scanports</h4>
+              <p><strong>Linguagens:</strong>Golang, Python, Ruby</p>
+              <a href="https://github.com/Barionix/Trovilo" target="_blank" class="btn btn-sm btn-outline-primary">
+                <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
           </div>
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Resume Section ======= 
     <section id="resume" class="resume">
