--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>E-commerce (Node/React)</h4>
-              <p><strong>Linguagens:</strong> JavaScript, Node.js, React.js</p>
+              <h4>E-commerce ~Node/React </h4>
+              <p><strong>Linguagens:</strong> JavaScript(Node.js, React.js)</p>
               <a href="https://github.com/Barionix/e-commerce-react-node" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
@@ -206,9 +206,9 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>E-commerce (Golang/React)</h4>
-              <p><strong>Linguagens:</strong> Golang, React</p>
-              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+              <h4>E-commerce ~ Ruby ON Rails/React</h4>
+              <p><strong>Linguagens:</strong> Ruby, Javascript</p>
+              <a href="https://github.com/Barionix/e-commerce-reat-rails" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
@@ -217,7 +217,7 @@
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>E-commerce (Django/React)</h4>
-              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <p><strong>Linguagens:</strong> Python,</p>
               <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
@@ -226,7 +226,7 @@
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>Auth (Golang/React)</h4>
-              <p><strong>Linguagens:</strong> Python, Flask</p>
+              <p><strong>Linguagens:</strong> Golang, JavaScript</p>
               <a href="https://github.com/Barionix/GoLAUTH" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
