:sparkles: Django project

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>E-commerce ~ Ruby ON Rails/React</h4>
+              <h4>E-commerce ~ Ruby On Rails/React</h4>
               <p><strong>Linguagens:</strong> Ruby, Javascript</p>
               <a href="https://github.com/Barionix/e-commerce-reat-rails" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
@@ -216,16 +216,16 @@
 
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>E-commerce (Django/React)</h4>
-              <p><strong>Linguagens:</strong> Python,</p>
-              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+              <h4>E-commerce ~ Django/React</h4>
+              <p><strong>Linguagens:</strong> Python, JavaScript</p>
+              <a href="" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
-              <h4>Auth (Golang/React)</h4>
+              <h4>E-commerce ~ Golang/React</h4>
               <p><strong>Linguagens:</strong> Golang, JavaScript</p>
               <a href="https://github.com/Barionix/GoLAUTH" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
