:sparkles: Django project

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>E-commerce ~ Django/React</h4>
               <p><strong>Linguagens:</strong> Python, JavaScript</p>
-              <a href="" target="_blank" class="btn btn-sm btn-outline-primary">
+              <a href="https://github.com/Barionix/e-commerce-react-django" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
