--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="http://t.me/Barionixx" class="twitter"><i class="bi bi-telegram"></i></a>
           <a href="https://www.instagram.com/_mario.dev/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/Barionix" class="google-plus"><i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/mariojrsoares/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/lucimariosoares/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -131,9 +131,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">8 year(s)</i></span>
+              <span class="skill">Python <i class="val">9 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -145,9 +145,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">AWS Cloud Practitioner<i class="val">0,7 year(s)</i></span>
+              <span class="skill">AWS Cloud Practitioner<i class="val">5 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="11" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -156,23 +156,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">CI/CD<i class="val">1,2 year(s)</i></span>
+              <span class="skill">CI/CD<i class="val">4 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Golang<i class="val">7 year(s)</i></span>
+              <span class="skill">Golang<i class="val">8 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">React.js<i class="val">4 year(s)</i></span>
+              <span class="skill">React.js<i class="val">5 year(s)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -227,7 +227,7 @@
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>E-commerce ~ Golang/React</h4>
               <p><strong>Linguagens:</strong> Golang, JavaScript</p>
-              <a href="https://github.com/Barionix/GoLAUTH" target="_blank" class="btn btn-sm btn-outline-primary">
+              <a href="https://github.com/Barionix/e-commerce-react-go" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
@@ -281,7 +281,7 @@
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>Auth (Golang/React)</h4>
               <p><strong>Linguagens:</strong> Python, Flask</p>
-              <a href="https://github.com/Barionix/seu-repositorio" target="_blank" class="btn btn-sm btn-outline-primary">
+              <a href="https://github.com/Barionix/GoLAUTH" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
             </div>
