:art: admin finder

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
              <div class="col-lg-6">
             <div class="portfolio-item p-3 shadow-sm rounded mb-4">
               <h4>Admin Finder ~ Ruby</h4>
-              <p><strong>Linguagens:</strong>Golang</p>
+              <p><strong>Linguagens:</strong>Ruby</p>
               <a href="https://github.com/Barionix/Trovilo-rb" target="_blank" class="btn btn-sm btn-outline-primary">
                 <i class="bi bi-github"></i> See on GitHub
               </a>
